# plugin-GUI

Source/: Doxyfile
Source/Plugins/PhaseDetector/: CMakeLists.txt
Source/Plugins/PulsePalOutput/serial/: PulsePal.cpp
